build/cs/kube.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-server
  labels:
    app: config-server
    service: config-server
spec:
  ports:
    - port: 22590
      name: admin
    - port: 22650
      name: gossip
    - port: 21520
      name: grpc
    - port: 80
      name: http
  selector:
    app: config-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server-v1
  labels:
    app: config-server
    version: v1
spec:
  selector:
    matchLabels:
      app: config-server
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: config-server
        version: v1
    spec:
      serviceAccountName: config-server
      containers:
        - name: config-server
          image: houyitracing/config-server
          imagePullPolicy: Always
          ports:
            - containerPort: 22590
            - containerPort: 22650
            - containerPort: 21520
            - containerPort: 80
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: { }
---
